sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:6: error: ')' expected but ',' found.
  for ( i <- 0, a-2){
              ^